[package]
name = "veisku"
version = "0.0.0"
authors = ["yvt <i@yvt.jp>"]
edition = "2018"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
unicode-width = { version = "0.1.8" }
env_logger = { version = "0.8.1" }
serde_json = { version = "1.0.59" }
serde_yaml = { version = "0.8.14" }
ansi_term = { version = "0.12.1" }
thiserror = { version = "1.0.22" }
globwalk = { version = "0.8.0" }
console = { version = "0.13.0" }
anyhow = { version = "1.0.34" }
either = { version = "1.6.1" }
array = { version = "0.0.1" }
regex = { version = "1.4.2" }
serde = { version = "1.0.117", features = ["derive"] }
clap = { version = "3.0.0-beta.2", features = ["wrap_help"] }
toml = { version = "0.5.7" }
log = { version = "0.4.11" }

[[bin]]
path = "src/main.rs"
name = "v"
